--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data source= Gmeet.db"
   },
+  "TokenKey":"super secret ungessable key",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
