--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,8 @@
     "@schematics/angular": "^9.1.0",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^6.2.0",
+    "ngx-toaster": "^1.0.1",
+    "ngx-toastr": "^14.2.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
