--- a/client/angular.json
+++ b/client/angular.json
@@ -28,6 +28,7 @@
             ],
             "styles": [
               "src/styles.css",
+              "./node_modules/bootswatch/dist/litera/bootstrap.css",
               "./node_modules/font-awesome/css/font-awesome.css",
               "./node_modules/ngx-toastr/toastr.css"
             ],
