--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~13.1.0",
     "@ngrx/store": "^13.0.2",
     "@schematics/angular": "^9.1.0",
+    "bootswatch": "^5.1.3",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^6.2.0",
     "ngx-toaster": "^1.0.1",
