--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "@kolkov/ngx-gallery": "^2.0.0",
     "@ngrx/store": "^13.0.2",
     "@schematics/angular": "^9.1.0",
     "bootswatch": "^5.1.3",
