--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "bootswatch": "^5.1.3",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^6.2.0",
+    "ngx-spinner": "^13.0.0",
     "ngx-toaster": "^1.0.1",
     "ngx-toastr": "^14.2.1",
     "rxjs": "~7.4.0",
