--- a/client/package.json
+++ b/client/package.json
@@ -21,8 +21,10 @@
     "@kolkov/ngx-gallery": "^2.0.0",
     "@ngrx/store": "^13.0.2",
     "@schematics/angular": "^9.1.0",
+    "angular-file-upload": "^2.6.1",
     "bootswatch": "^5.1.3",
     "font-awesome": "^4.7.0",
+    "ng2-file-upload": "^1.4.0",
     "ngx-bootstrap": "^6.2.0",
     "ngx-spinner": "^13.0.0",
     "ngx-toaster": "^1.0.1",
