--- a/client/package.json
+++ b/client/package.json
@@ -27,9 +27,11 @@
     "ng2-file-upload": "^1.4.0",
     "ngx-bootstrap": "^6.2.0",
     "ngx-spinner": "^13.0.0",
+    "ngx-timeago": "^2.0.0",
     "ngx-toaster": "^1.0.1",
     "ngx-toastr": "^14.2.1",
     "rxjs": "~7.4.0",
+    "timeago.js": "^4.0.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
