--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,9 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "@aspnet/signalr": "^3.0.0-preview6.19307.2",
     "@kolkov/ngx-gallery": "^2.0.0",
+    "@microsoft/signalr": "^6.0.1",
     "@ngrx/store": "^13.0.2",
     "@schematics/angular": "^9.1.0",
     "angular-file-upload": "^2.6.1",
